fix: finalize phase 19 clipboard classification and sync